# AuthServer

./: .env.local  .gitignore  Dockerfile  README.md  main.py  main_app.py  pyproject.toml
.github/workflows/: github-actions.yml
.pipeline/: buildspec-build.yml
config/: config.py  config_dev.yml  config_local.yml  otel-collector-config_local.yml
dependency/: docker-compose.yml  prometheus.yml
dependency/init/: init.sql
docs/: README.ko.md
environments/dev/: config.yaml
environments/dev-local/: config.yaml
environments/local/: config.yaml  otel-collector-config.yml
scripts/: tunnel-ssm.sh
src/config/: settings.py
src/constants/: jwt_constants.py
src/core/: database.py  jwt_logic.py  logger.py  message_maker.py  metrics.py  rabbitmq.py  rabbitmq_client.py  redis_client.py  redis_core.py  scm_pem_cipher.py  worker.py
src/core/JWT/: jwt_hs256.py  jwt_logic.py  jwt_rs256.py
src/data_model/: logger_config.py  mq_config.py
src/data_model/rabbitmq_messages/: email_verification_message.py  mq_message.py
src/factories/: rabbitmq.py  redis.py  services.py  source_control.py
src/middleware/: http_middleware.py
src/repositories/: outbox_repository.py  user_repository.py
src/repositories/models/: user.py
src/repositories/schemas/: outbox_event.py  scm_connection.py  user.py
src/routers/: auth.py  base.py  jwks.py  source_control.py  test.py  user.py  well_known.py
src/routers/models/: auth.py  base.py  outbox_event.py  (+3 more)
src/services/: __init__.py  auth_service.py  message_queue_service.py  outbox_service.py  redis_service.py  source_control_service.py  user_service.py
(+9 files in other folders)
