[project]
name = "authserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
